[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/MobileUI.gd" type="Script" id=1]
[ext_resource path="res://Art/HUD/log.png" type="Texture" id=2]
[ext_resource path="res://Art/HUD/log_button_up.png" type="Texture" id=3]
[ext_resource path="res://Art/HUD/log_button_down.png" type="Texture" id=4]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/HUD/main_equip_slot.png" type="Texture" id=6]
[ext_resource path="res://Art/HUD/equip_slot.png" type="Texture" id=7]
[ext_resource path="res://Art/Menu/map.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 39, 10 )
margin_left = 3.71366
margin_right = 4.00027
margin_top = 2.30095
margin_bottom = 4.21451

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0.368627, 0.368627, 0.368627, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 5 )

[node name="MobileUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="top" type="MarginContainer" parent="screen"]
margin_right = 1920.0
margin_bottom = 202.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="logbar" type="VBoxContainer" parent="screen/top"]
margin_right = 1920.0
margin_bottom = 202.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="log" type="ScrollContainer" parent="screen/top/logbar"]
margin_right = 1920.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 50.0
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="screen/top/logbar/log"]

[node name="logToggle" type="Button" parent="screen/top/logbar"]
margin_top = 130.0
margin_right = 1920.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 32 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0

[node name="toggleIcon" type="TextureRect" parent="screen/top/logbar/logToggle"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -21.75
margin_bottom = 18.25
rect_min_size = Vector2( 32, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="downIcon" type="TextureRect" parent="screen/top/logbar/logToggle/toggleIcon"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="status" type="Label" parent="screen/top/logbar"]
margin_top = 162.0
margin_right = 1920.0
margin_bottom = 202.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.717647, 0.717647, 0.717647, 1 )
text = "Status:"
align = 3
valign = 1
autowrap = true

[node name="spacer" type="MarginContainer" parent="screen/top/logbar"]
visible = false
margin_top = 137.0
margin_right = 1920.0
margin_bottom = 202.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 50.0

[node name="middle" type="ReferenceRect" parent="screen"]
margin_top = 206.0
margin_right = 1920.0
margin_bottom = 974.0
rect_pivot_offset = Vector2( -830, -62 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.8
border_color = Color( 1, 0, 0.866667, 1 )

[node name="c" type="VBoxContainer" parent="screen/middle"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2

[node name="spacer" type="MarginContainer" parent="screen/middle/c"]
margin_right = 1920.0
margin_bottom = 488.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.2

[node name="c" type="HBoxContainer" parent="screen/middle/c"]
margin_top = 492.0
margin_right = 1920.0
margin_bottom = 768.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.8

[node name="spacer" type="MarginContainer" parent="screen/middle/c/c"]
margin_right = 1920.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.6

[node name="groundViewer" type="VBoxContainer" parent="screen/middle/c/c"]
visible = false
margin_left = 1183.0
margin_right = 1920.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="GroundToggle" type="Button" parent="screen/middle/c/c/groundViewer"]
margin_right = 737.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
text = "Ground â–¼"

[node name="groundView" type="ScrollContainer" parent="screen/middle/c/c/groundViewer"]
margin_top = 60.0
margin_right = 737.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="list" type="GridContainer" parent="screen/middle/c/c/groundViewer/groundView"]
margin_right = 737.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bottom" type="ReferenceRect" parent="screen"]
margin_top = 978.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( -830, -62 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="equipBar" type="HBoxContainer" parent="screen/bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="leftEquip" type="HBoxContainer" parent="screen/bottom/equipBar"]
margin_right = 783.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 2

[node name="spacer" type="MarginContainer" parent="screen/bottom/equipBar/leftEquip"]
margin_right = 23.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="TextureButton" type="TextureButton" parent="screen/bottom/equipBar/leftEquip"]
margin_left = 43.0
margin_right = 276.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="screen/bottom/equipBar/leftEquip"]
margin_left = 296.0
margin_right = 529.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextureButton3" type="TextureButton" parent="screen/bottom/equipBar/leftEquip"]
margin_left = 549.0
margin_right = 783.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="menuButton" type="TextureButton" parent="screen/bottom/equipBar"]
margin_left = 803.0
margin_right = 1116.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="leftEquip2" type="HBoxContainer" parent="screen/bottom/equipBar"]
margin_left = 1136.0
margin_right = 1920.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="TextureButton" type="TextureButton" parent="screen/bottom/equipBar/leftEquip2"]
margin_right = 233.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="screen/bottom/equipBar/leftEquip2"]
margin_left = 253.0
margin_right = 486.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextureButton3" type="TextureButton" parent="screen/bottom/equipBar/leftEquip2"]
margin_left = 506.0
margin_right = 739.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="spacer" type="MarginContainer" parent="screen/bottom/equipBar/leftEquip2"]
margin_left = 759.0
margin_right = 784.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="highlighter TODO" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
[connection signal="pressed" from="screen/top/logbar/logToggle" to="." method="_on_logToggle_pressed"]
[connection signal="pressed" from="screen/middle/c/c/groundViewer/GroundToggle" to="." method="_on_GroundToggle_pressed"]
[connection signal="pressed" from="screen/bottom/equipBar/menuButton" to="." method="_on_menuButton_pressed"]
